--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
